# NotaMed

./: .env.example  .eslintrc.js  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: requirements.txt
backend/app/core/: config.py  database.py  exceptions.py  security.py
backend/app/models/: user.py
backend/app/schemas/: auth.py
client/: .env  .env.example  index.html  package.json  vite.config.ts
client/public/: sw.js
client/src/: App.tsx  config.ts  main.tsx  pwa-register.ts  vite-env.d.ts
client/src/api/: auth.ts  config.ts
client/src/components/common/: ErrorBoundary.tsx
client/src/components/navigation/: BottomNav.tsx
client/src/components/recording/: WaveformVisualizer.tsx
client/src/components/security/: SessionTimeoutModal.tsx
client/src/components/transcription/: TranscriptionView.tsx
client/src/constants/: config.ts
client/src/context/: AuthContext.tsx  ThemeContext.tsx
client/src/hooks/: useAuth.ts  useClipboard.ts
client/src/layouts/: AppLayout.tsx
client/src/styles/: global.css
client/src/types/: index.ts
frontend/: .env.local  next.config.js  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/hooks/: useAudioRecorder.ts
server/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
server/app/: __init__.py  main.py
server/app/api/v1/endpoints/: auth.py  formatting.py  health.py  transcription.py
server/app/core/: config.py  security.py
server/app/models/database/: base.py  user_table.py
server/app/models/domain/: note.py  user.py
server/app/services/llm/: __init__.py  engine.py  prompt_templates.py
server/app/services/stt/: __init__.py  engine.py
server/app/utils/: text_sanitizer.py
server/requirements/: base.txt  dev.txt
src/layouts/: AppLayout.tsx
(+16 files in other folders)
