[project]
name = "medivoice-api"
version = "0.1.0"
description = "MediVoice Backend API - Clinical Voice-to-Text Processing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MediVoice Team"}
]
keywords = ["medical", "voice-to-text", "clinical-notes", "fastapi"]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "aiosqlite>=0.19.0",
    "databases>=0.8.0",
    "httpx>=0.25.0",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "openai>=1.3.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "cryptography>=41.0.7",
    "slowapi>=0.1.9",
    "tenacity>=8.2.3",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
    "faker>=20.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=app --cov-report=term-missing"
